# tui-fi

./: Cargo.toml  README.md
src/: app.rs  config.rs  history.rs  m3u.rs  main.rs  mpris.rs  player.rs  playlist.rs  ui.rs  utils.rs
