[package]
name = "tui-fi"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rodio = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dirs = "5"
rand = "0.8"
lofty = "0.22"
mpris-server = "0.8"
tokio = { version = "1", features = ["rt", "sync"] }

